logs/potools.log
Listing '.'...
Listing './bin'...
Compiling './bin/buildxpi.py'...
Compiling './bin/get_moz_enUS.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/diff_match_patch'...
Listing './lib/python3.5/site-packages/diff_match_patch-20121119.egg-info'...
Listing './lib/python3.5/site-packages/mr'...
Listing './lib/python3.5/site-packages/mr/developer'...
Listing './lib/python3.5/site-packages/mr/developer/tests'...
Listing './lib/python3.5/site-packages/mr.developer-1.38.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/polib-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/potools'...
Compiling './lib/python3.5/site-packages/potools/pocheck.py'...
***   File "./lib/python3.5/site-packages/potools/pocheck.py", line 45
    print out
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/potools/poget.py'...
***   File "./lib/python3.5/site-packages/potools/poget.py", line 54
    print outpo
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/potools/pounique.py'...
***   File "./lib/python3.5/site-packages/potools/pounique.py", line 70
    print po
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/potools/tests'...
Listing './lib/python3.5/site-packages/potools/tests/locales'...
Listing './lib/python3.5/site-packages/potools/tests/locales2'...
Listing './lib/python3.5/site-packages/potools-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/translate'...
Listing './lib/python3.5/site-packages/translate/convert'...
Listing './lib/python3.5/site-packages/translate/docs'...
Listing './lib/python3.5/site-packages/translate/docs/_build'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees/api'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees/commands'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees/developers'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees/formats'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees/guides'...
Listing './lib/python3.5/site-packages/translate/docs/_build/doctrees/releases'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources/api'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources/commands'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources/developers'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources/formats'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources/guides'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_sources/releases'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_static'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_static/font'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/_static/less'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/api'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/commands'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/developers'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/formats'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/guides'...
Listing './lib/python3.5/site-packages/translate/docs/_build/html/releases'...
Listing './lib/python3.5/site-packages/translate/docs/_ext'...
Compiling './lib/python3.5/site-packages/translate/docs/_ext/translate_docs.py'...
Listing './lib/python3.5/site-packages/translate/docs/_static'...
Listing './lib/python3.5/site-packages/translate/docs/_themes'...
Listing './lib/python3.5/site-packages/translate/docs/_themes/sphinx-bootstrap'...
Listing './lib/python3.5/site-packages/translate/docs/_themes/sphinx-bootstrap/static'...
Listing './lib/python3.5/site-packages/translate/docs/_themes/sphinx-bootstrap/static/font'...
Listing './lib/python3.5/site-packages/translate/docs/_themes/sphinx-bootstrap/static/less'...
Listing './lib/python3.5/site-packages/translate/docs/api'...
Listing './lib/python3.5/site-packages/translate/docs/commands'...
Compiling './lib/python3.5/site-packages/translate/docs/conf.py'...
Listing './lib/python3.5/site-packages/translate/docs/developers'...
Listing './lib/python3.5/site-packages/translate/docs/formats'...
Listing './lib/python3.5/site-packages/translate/docs/guides'...
Listing './lib/python3.5/site-packages/translate/docs/releases'...
Listing './lib/python3.5/site-packages/translate/filters'...
Listing './lib/python3.5/site-packages/translate/lang'...
Listing './lib/python3.5/site-packages/translate/misc'...
Listing './lib/python3.5/site-packages/translate/misc/wsgiserver'...
Listing './lib/python3.5/site-packages/translate/search'...
Listing './lib/python3.5/site-packages/translate/search/indexing'...
Listing './lib/python3.5/site-packages/translate/services'...
Listing './lib/python3.5/site-packages/translate/share'...
Listing './lib/python3.5/site-packages/translate/share/langmodels'...
Listing './lib/python3.5/site-packages/translate/storage'...
Listing './lib/python3.5/site-packages/translate/storage/placeables'...
Listing './lib/python3.5/site-packages/translate/storage/versioncontrol'...
Listing './lib/python3.5/site-packages/translate/storage/xml_extract'...
Listing './lib/python3.5/site-packages/translate/tools'...
Listing './lib/python3.5/site-packages/translate_toolkit-2.2.5.egg-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
